# tsugi

./: README.md  app-icon.afdesign  example.json  github.http  index.html  package.json  pnpm-lock.yaml
src/: App.svelte  App.tsx  TaskIcon.tsx  Tasks.svelte  styles.css  task.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  github.rs  main.rs  plugin.rs  sqlite.rs  storage.rs  task.rs
