[package]
name = "tsugi"
version = "0.0.1"
description = "A Tauri app that collects your TODOs from across the web and presents them in one place"
authors = ["Shad Sharma <shadanan@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shadanan/tsugi/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.20"
futures = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
