[package]
name = "tsugi"
version = "0.0.1"
description = "A Tauri app that collects your TODOs from across the web and presents them in one place"
authors = ["Shad Sharma <shadanan@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shadanan/tsugi/"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
async-trait = "0.1.73"
futures = "0.3"
git2 = "0.18.1"
reqwest = "0.11.20"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4", features = [
  "path-all",
  "notification-all",
  "shell-open",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
